# parts-identifier

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  retrieval.py
data/: generate_catalog.py  parts_catalog.json
docs/: desktop.ini
eval/: run_eval.py  testcases.json
templates/: index.html
