[project]
name = "parts-identifier"
version = "2.0.0"
description = "Multimodal RAG parts identifier: field photo + damage description -> replacement part (FastAPI, Cerebras, local embeddings)"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "cerebras_cloud_sdk>=1.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]
